--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -8,29 +8,28 @@ jobs:
   build_site:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       # If you're using pnpm, add this step then change the commands and cache key below to use `pnpm`
-      - name: Install pnpm
+      - name: 安裝 pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10
 
-      - name: Install Node.js
+      - name: 安裝 Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: pnpm
 
-      - name: Install dependencies
+      - name: 安裝依賴
         run: pnpm install
 
-      - name: build
+      - name: build the app
         env:
-          BASE_PATH: '/${{ github.event.repository.name }}'
+          BASE_PATH: /${{ github.event.repository.name }}
           run: |
-            pnpm run build
+            pnpm build
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
@@ -40,15 +39,9 @@ jobs:
   deploy:
     needs: build_site
     runs-on: ubuntu-latest
-
-    permissions:
-      pages: write
-      id-token: write
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
       - name: Deploy
         id: deployment
