--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,7 @@ jobs:
       - name: build the app
         env:
           BASE_PATH: /${{ github.event.repository.name }}
-        run: |
-          pnpm build
+        run: pnpm build
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
