--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,47 +5,54 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Configure pages
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
+
 jobs:
-  build_site:
+  build_and_deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      # If you're using pnpm, add this step then change the commands and cache key below to use `pnpm`
       - name: 安裝 pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10
+          version: 10 # 可指定版本，或省略安裝最新版
 
-      - name: 安裝 Node.js
+      - name: 設定 Node.js 環境
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: pnpm
+          node-version: 22
+          cache: 'pnpm' # 啟用 pnpm 快取
 
       - name: 安裝依賴
         run: pnpm install
 
-      - name: build the app
+      - name: Build the app
         env:
           BASE_PATH: /${{ github.event.repository.name }}
         run: pnpm build
 
-      - name: Upload Artifacts
+      - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'build/'
+          path: dist/
 
   deploy:
-    needs: build_site
+    needs: build_and_deploy
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
