--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,11 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
+	"bracketSpacing": true,
+	"svelteBracketNewLine": false,
+	"bracketSameLine": false,
 	"trailingComma": "none",
+	"tabWidth": 2,
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
@@ -11,5 +15,6 @@
 				"parser": "svelte"
 			}
 		}
-	]
+	],
+	"htmlWhitespaceSensitivity": "ignore"
 }
