--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'
 
 permissions:
   contents: read
@@ -12,7 +12,7 @@ permissions:
 
 # Configure pages
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: true
 
 jobs:
@@ -25,16 +25,21 @@ jobs:
       - name: 安裝 pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10  # 可指定版本，或省略安裝最新版
+          version: 10 # 可指定版本，或省略安裝最新版
 
       - name: 設定 Node.js 環境
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'pnpm'  # 啟用 pnpm 快取
+          cache: 'pnpm' # 啟用 pnpm 快取
 
       - name: 安裝依賴
         run: pnpm install
+
+      - name: Set environment variables
+        run: |
+          echo "VITE_VERSION=${{ github.ref_name }}" >> .env
+        # 這裡用 GitHub Secrets 儲存敏感參數，並用 tag 名稱當版本號
 
       - name: Build the app
         env:
