--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Set environment variables
         run: |
-          echo "VITE_VERSION=${{ github.ref_name }}" >> .env
+          echo "VITE_VERSION=${{ github.run_number }}" >> .env
         # 這裡用 GitHub Secrets 儲存敏感參數，並用 tag 名稱當版本號
 
       - name: Build the app
