--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
 		]
 	},
 	"dependencies": {
+		"crypto-js": "^4.2.0",
+		"js-base64": "^3.7.7",
+		"json5": "^2.2.3",
+		"jwt-decode": "^4.0.0",
 		"lodash": "^4.17.21"
 	}
 }
