--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
 		"json5": "^2.2.3",
 		"jwt-decode": "^4.0.0",
 		"lodash": "^4.17.21",
-		"pnpm": "^10.12.1"
+		"pnpm": "^10.12.1",
+		"svelte-jsoneditor": "^3.6.0",
+		"svelte-splitpanes": "^8.0.9",
+		"yaml": "^2.8.0"
 	}
 }
