--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,9 @@ indent_style = tab
 indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.{json}]
+indent_style = tab
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = false
