--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,8 @@ jobs:
           echo "VITE_VERSION=v0.0.${{ github.run_number }}" >> .env
           echo "VITE_GOOGLE_API_KEY=${{ secrets.VITE_GOOGLE_API_KEY }}" >> .env
           echo "VITE_HOLIDAY_SHEET=${{ secrets.VITE_HOLIDAY_SHEET }}" >> .env
+          echo "VITE_STEP_SHEET=${{ secrets.VITE_STEP_SHEET }}" >> .env
+          echo "VITE_HIDDEN_CODE=${{ secrets.VITE_HIDDEN_CODE }}" >> .env
         # 這裡用 GitHub Secrets 儲存敏感參數，並用 tag 名稱當版本號
 
       - name: Build the app
