--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
+		"@anoram/leaflet-svelte": "0.0.7-1",
 		"@svelte-put/qr": "^2.1.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
